--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/dropdown.css"></link>
+    <link rel="stylesheet" href="css/style.css"></link>
 </head>
 <body>
-    <div id="mycontainer"></div>
+    <div id="mycontainer" style="margin:10px;"></div>
 
     <script src="./out/package.js"></script>
 </body>
