styling and some fixes and tweaks

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="css/style.css"></link>
 </head>
 <body>
-    <div id="mycontainer" style="margin:10px;"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <div id="mycontainer" style="margin:10px;"></div>
+            </div>
+        </div>
+    </div>
 
     <script src="./out/package.js"></script>
 </body>
