--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="css/style.css"></link>
 </head>
 <body>
+    <div style="height:50px; background-color: #222222; display: flex; align-items: center; padding: 10px;">
+        <a href="#" style="color: #f7f7f9; margin: 10px;">Tests</a>
+        <a href="#result" style="color: #f7f7f9; margin: 10px;">Results</a>
+    </div>
+    
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2"></div>
@@ -19,6 +24,7 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.min.js"></script>
     <script src="./out/package.js"></script>
 </body>
 </html>
